--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+        <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
     <title>Blog preview card</title>
-    <link rel="stylesheet" href="./../styles/master.css" />
+    <link rel="stylesheet" href="./styles/master.css" />
   </head>
   <body>
     <main>
@@ -25,7 +31,7 @@
         <figure>
           <img
             class="first-img"
-            src="./../assets/imgs/illustration-article.svg"
+            src="./assets/imgs/illustration-article.svg"
             alt="blog-image"
           />
           <figcaption>Learning</figcaption>
@@ -37,7 +43,7 @@
           content, and presentation
         </p>
         <footer>
-          <img src="./../assets/imgs/download.jpeg" alt="avatar-img" />
+          <img src="./assets/imgs/download.jpeg" alt="avatar-img" />
           <figcaption>Greg Hooper</figcaption>
         </footer>
       </div>
